--- a/css/index.css
+++ b/css/index.css
@@ -4,11 +4,11 @@
 }
 
 :root {
-    --main-bg: #f1e1e1;
-    --main-c: #1e1e1e;
+    --main-bg: #030303;
+    --main-c: #fafafa;
 }
 
-*:not(#pattern) {
+* {
     max-width: 90vw;
     transition: all 0.2s;
 }
@@ -36,20 +36,6 @@ a:hover {
     color: #ee2624;
 }
 
-#pattern {
-    position: fixed;
-    top: 0;
-    left: 0;
-
-    width: 100% !important;
-    height: 100%;
-
-    opacity: 0.5;
-    background: url("../src/img/plus2.png");
-    background-size: 3vw;
-    background-position: 0.5vw 0.5vw;
-}
-
 #nav {
     position: relative;
     top: 1vw;
@@ -65,7 +51,7 @@ a:hover {
     font-size: 0.6vw;
     font-weight: 400;
 
-    background: #e2d5d5;
+    background: #272626;
     cursor: pointer;
 }
 
@@ -91,7 +77,7 @@ a:hover {
 }
 
 .chapter > #name:hover {
-    font-size: 9.5vw;
+    bottom: 1vw;
 }
 
 .chapter > #description {
@@ -136,8 +122,8 @@ a:hover {
     width: var(--width);
     height: var(--height);
 
-    background: #e9e9e9;
-    border: 0.01vw solid #000;
+    background: #0e0e0e;
+    border: 0.01vw solid #fff;
 
     cursor: pointer;
 }
@@ -175,9 +161,9 @@ a:hover {
 
     height: calc(var(--height) - 1.6vw);
     width: calc(var(--width) - 0.7vw);
-    background: #f7f1f1;
+    background: #000000;
 
-    border: 0.01vw solid #000;
+    border: 0.01vw solid #fff;
 }
 
 .window > #output > #overlay {
@@ -185,6 +171,7 @@ a:hover {
     width: 100%;
     height: 100%;
 
+    opacity: 0.4;
     background: url("../src/img/plus2.png");
     background-size: 3vw;
     background-position: 1.5vw 1.5vw;
@@ -235,7 +222,7 @@ a:hover {
 
     width: 92vw;
     height: 0.01vw;
-    background: #000;
+    background: #fff;
 }
 
 .marquee {
@@ -306,7 +293,7 @@ a:hover {
 
     width: 20vw;
     height: 0.01vw;
-    background: #000;
+    background: #fff;
 }
 
 .competitions > #competition-section {
@@ -337,8 +324,7 @@ a:hover {
 
     width: 65vw;
     height: 2vw;
-    border-top: 0.01vw solid #000;
-    border-bottom: 0.01vw solid #000;
+    border-top: 0.01vw solid #fff;
 
     font-size: 0.8vw;
 
